--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -16,7 +16,7 @@ on:
 env:
   ROM_URL: https://bigota.d.miui.com/V11.0.3.0.QCPCNXM/miui_OLIVELITE_V11.0.3.0.QCPCNXM_71a6008710_10.0.zip
   ROM_NAME: MIUI
-  BUILD_TYPE: Aonly
+  BUILD_TYPE: aonly
   TZ: Asia/Shanghai
 
 jobs:
